#  FLAC - Free Lossless Audio Codec
#  Copyright (C) 2001,2002  Josh Coalson
#
#  This program is part of FLAC; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

EXTRA_DIST = \
	bad.000.CATALOG_multiple.cue \
	bad.001.CATALOG_missing_number.cue \
	bad.002.CATALOG_number_too_long.cue \
	bad.003.CATALOG_not_13_digits.cue \
	bad.030.FLAGS_multiple.cue \
	bad.031.FLAGS_wrong_place_1.cue \
	bad.032.FLAGS_wrong_place_2.cue \
	bad.060.INDEX_wrong_place.cue \
	bad.061.INDEX_missing_number.cue \
	bad.062.INDEX_invalid_number_1.cue \
	bad.063.first_INDEX_not_0_or_1.cue \
	bad.064.INDEX_num_non_sequential.cue \
	bad.065.INDEX_num_out_of_range.cue \
	bad.066.INDEX_missing_offset.cue \
	bad.067.INDEX_illegal_offset.cue \
	bad.068.INDEX_cdda_illegal_offset.cue \
	bad.069.nonzero_first_INDEX.cue \
	bad.070.INDEX_offset_not_ascending_1.cue \
	bad.071.INDEX_offset_not_ascending_2.cue \
	bad.110.ISRC_multiple.cue \
	bad.111.ISRC_wrong_place_1.cue \
	bad.112.ISRC_wrong_place_2.cue \
	bad.113.ISRC_missing_number.cue \
	bad.114.ISRC_invalid_number.cue \
	bad.130.TRACK_missing_INDEX_01_1.cue \
	bad.131.TRACK_missing_INDEX_01_2.cue \
	bad.132.TRACK_missing_INDEX_01_3.cue \
	bad.133.TRACK_missing_INDEX_01_4.cue \
	bad.134.TRACK_missing_number.cue \
	bad.135.TRACK_invalid_number_1.cue \
	bad.136.TRACK_invalid_number_2.cue \
	bad.137.TRACK_cdda_out_of_range.cue \
	bad.138.TRACK_num_non_sequential.cue \
	bad.139.TRACK_missing_type.cue \
	bad.140.no_TRACKs.cue \
	bad.200.FLAC_leadin_missing_offset.cue \
	bad.201.FLAC_leadin_illegal_offset.cue \
	bad.202.FLAC_leadin_cdda_illegal_offset.cue \
	bad.230.FLAC_leadout_multiple.cue \
	bad.231.FLAC_leadout_missing_track.cue \
	bad.232.FLAC_leadout_illegal_track.cue \
	bad.233.FLAC_leadout_missing_offset.cue \
	bad.234.FLAC_leadout_illegal_offset.cue \
	bad.235.FLAC_leadout_offset_not_211680000.cue \
	good.000.cue \
	good.001.cue
